--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .cache
 .do_built
 .do_built.dir/
+result
 *.did.tmp
 *.o
 *.d
@@ -10,6 +11,7 @@ cmd/iotac
 lex/ucgen
 lex/uc_data.c
 lex/liblex.a
+ast/libast.a
 syn/libsyn.a
 config.env
 t/test.o
